PR-6 :: Добавлен метод выход из аккаунта, мелкие правки